agent.py which build an AI agent is done

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 langchain
 langchain-openai
 langchain-huggingface
+
 # --- Vector Store ---
 faiss-cpu
 
@@ -26,3 +27,4 @@ numpy
 matplotlib
 torch
 accelerate
+huggingface_hub
