--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        python-version: [3.10.2]
+        python-version: [3.11]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -22,22 +22,25 @@ jobs:
       - name: Test with pytest
         run:
           nox -s test
-  lint:
-    name: Lint
+  typing:
+    name: typing
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.10.2]
+        python-version: [3.11]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
-        run: pip install nox
-      - name: Run flake8
-        run: nox -s lint
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install nox
+
       - name: Run mypy
         run: nox -s typing
-
